--- a/einleitung.tex
+++ b/einleitung.tex
@@ -68,7 +68,7 @@ geringere Störanfälligkeit gegenüber Strahlung, was FPGAs z.B. für den Einsa
 in Experimenten der Teilchenphysik interessant macht. Auch der bei GPUs durch
 das Betriebssystem und die Hardware"=Treiber vorhandene Overhead lässt sich bei
 FPGAs vermeiden -- sofern keine Abhängigkeit des Algorithmus oder weiterer
-Hardware"=Komponenten zu Software besteht --, da die Schaltung selbst von
+Hardware"=Komponenten zur Software besteht --, da die Schaltung selbst von der
 Software unabhängig ist.
 
 Da die Synthese einer Schaltung je nach Komplexität des Algorithmus einige
@@ -131,7 +131,7 @@ Schon 2009 veröffentlichten Papakonstantinou \textit{et al.} einen Ansatz, der
 die Synthese einer Schaltung auf Basis der eigentlich für NVIDIA"=GPUs gedachten
 CUDA"=Schnittstelle ermöglichte. \cite[vgl.][]{papakonstantinou2009} 
 
-Diese Arbeit konnte sich jedoch nicht langfristig durchsetzen. Seit der ersten
+Diese Arbeit konnte sich jedoch langfristig nicht durchsetzen. Seit der ersten
 Veröffentlichung einer OpenCL"=Implementierung für FPGAs durch den Hersteller
 Altera (heute Intel) im Jahr 2013 verlagerte sich das Interesse der Forschung
 auf diese Plattform. 
