--- a/fazit.tex
+++ b/fazit.tex
@@ -14,8 +14,8 @@ man die Beschränkungen des Backend"=Prototypen in Kauf zu nehmen bereit ist.
 
 Gegenüber Alpaka bietet SYCL das modernere, intuitivere und standardnähere
 Programmier"=Interface. SYCLs fragmentiertes Ökosystem sowie der eingeschränkte
-Hardware"=Support sprechen im Moment noch recht deutlich gegen die Nutzung
-dieses insgesamt vielversprechenden Ansatzes zur parallelen Programmierung. Es
+Hardware"=Support sprechen im Moment allerdings noch recht deutlich gegen die
+Nutzung dieses insgesamt vielversprechenden Ansatzes zur parallelen Programmierung. Es
 bleibt deswegen abzuwarten, ob SYCL in den nächsten Monaten und Jahren weitere
 Verbreitung erfährt oder in der momentanen relativen Bedeutungslosigkeit
 verharrt. Wichtig wäre hier eine baldige vollständige Unterstützung von
