--- a/glossar.tex
+++ b/glossar.tex
@@ -4,6 +4,7 @@
 \newacronym{alu}{ALU}{\textit{arithmetic logic unit}}
 \newacronym{apu}{APU}{\textit{accelerated processing unit}}
 \newacronym{asic}{ASIC}{\textit{ap\-pli\-ca\-tion-spe\-cif\-ic integrated circuit}}
+\newacronym{axpy}{AXPY}{$a \cdot \vec{x} + \vec{y}$}
 \newacronym{clb}{CLB}{\textit{configurable logic block}}
 \newacronym{cmt}{CMT}{\textit{clock management tile}}
 \newacronym{cpu}{CPU}{\textit{central processing unit}}
@@ -27,6 +28,9 @@
 \newacronym{slr}{SLR}{\textit{super logic region}}
 \newacronym{vhsic}{VHSIC}{\textit{very high speed integrated circuit}}
 
+\newglossaryentry{ada}{name = Ada,
+                       description = {Programmiersprache, die vornehmlich im
+                                      Luft- und Raumfahrtsektor verbreitet ist}}
 \newglossaryentry{alpaka}{name = Alpaka,
                           description = {C++-Abstraktionsbibliothek für die
                                          Beschleunigerprogrammierung}}
@@ -73,6 +77,9 @@
                           description = {Programm, das auf einem Beschleuniger
                                          ausgeführt wird.},
                           plural = Kernel}
+\newglossaryentry{kokkos}{name = Kokkos,
+                          description = {C++-Abstraktionsbibliothek für die
+                                         Beschleunigerprogrammierung}}
 \newglossaryentry{latch}{name = Latch,
                          description = {Sonderform des Flip-Flops. Kann den
                                         Zustand von der Anfangs- bis zur
