--- a/fazit.tex
+++ b/fazit.tex
@@ -3,7 +3,7 @@
 
 Es konnte gezeigt werden, dass SYCL sich als Backend für die Alpaka"=Bibliothek
 grundsätzlich eignet. Da zur Zeit noch gravierende Inkompatibilitäten zwischen
-SYCL und Alpaka bestehen, ist eine Entwicklung über den Prototypen"=Status
+SYCL und Alpaka bestehen, ist eine Entwicklung über den Prototypen"=Status hinaus
 im Moment nicht durchführbar. Diesbezüglich sind noch einige konzeptionelle
 Änderungen in Alpaka und/oder SYCL notwendig.
 
@@ -19,13 +19,13 @@ Nutzung dieses insgesamt vielversprechenden Ansatzes zur parallelen Programmieru
 bleibt deswegen abzuwarten, ob SYCL in den nächsten Monaten und Jahren weitere
 Verbreitung erfährt oder in der momentanen relativen Bedeutungslosigkeit
 verharrt. Wichtig wäre hier eine baldige vollständige Unterstützung von
-NVIDIA"=GPUs, die den Bereich des HPC mit weitem Abstand dominieren. Auch für
-moderne AMD"=GPUs existiert bislang keine SYCL"=Implementierung, die auf dem
-HPC"=Sektor vorbehaltlos einzusetzen ist. Dadurch kann SYCL in der
-GPGPU"=Programmierung keine Rolle spielen, sofern man von den vergleichsweise
-leistungsschwachen Intel"=Laptop"=GPUs absieht. Diesbezüglich wird interessant
-sein, ob und wie gut Intels zukünftige dedizierte GPU"=Plattform mit SYCL
-genutzt werden kann.
+NVIDIA"=GPUs, die die GPGPU"=Programmierung im Bereich des HPC mit weitem
+Abstand dominieren. Auch für moderne AMD"=GPUs existiert bislang keine
+SYCL"=Implementierung, die auf dem HPC"=Sektor vorbehaltlos einzusetzen ist.
+Dadurch kann SYCL in der GPGPU"=Programmierung keine Rolle spielen, sofern man
+von den vergleichsweise leistungsschwachen Intel"=Laptop"=GPUs absieht.
+Diesbezüglich wird interessant sein, ob und wie gut Intels zukünftige dedizierte
+GPU"=Plattform mit SYCL genutzt werden kann.
 
 Für die Zukunft der Alpaka"=Bibliothek wäre eine weniger starke Anlehnung an
 CUDA wünschenswert. Diese ist zwar durch die historische Entwicklung der
