--- a/glossar.tex
+++ b/glossar.tex
@@ -12,6 +12,7 @@
 \newacronym{dram}{DRAM}{\textit{dynamic random-access memory}}
 \newacronym{dsp}{DSP}{\textit{digital signal processor}}
 \newacronym{fifo}{FIFO}{\textit{first in, first out}}
+\newacronym{flop}{FLOP}{\textit{floating point operations per second}, plural: FLOPS}
 \newacronym{fpga}{FPGA}{\textit{field programmable gate array}}
 \newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on GPU}}
 \newacronym{gpu}{GPU}{\textit{graphics processing unit}}
